# archaic_h2

./: .edu  .gitignore  .gitignore.swp  .~lock.partition.ods#  README.txt  environment.yaml  journal.txt  main.py  out.json  partition.ods  profile.txt  protocol.md  protocol.txt  pyproject.toml  readme.md  requirements.txt  sample_ids.json  setup.py  stat.py  test.bed  to-do.txt
archaic/: H2stats_mod.py  analytic.py  coalescent.py  counting.py  dev.py  inference.py  masks.py  numpytests.py  one_locus.py  parsing.py  plots.py  plotting.py  simulation.py  spectra.py  temp.py  two_locus.py  util.py  utils.py  weighting_tests.py
chtc/: .archaic_package.def.swp
condor/: fit_H2.sub
data/: sample_ids.json  windows.json
docs/: util.md
examples/: fit_model.py  plot_H2.py  poster_plots.py
h2py/: h2_parsing  h2_parsing.py  h2stats_mod.py  inference.py  plot_util.py  plotting.py  sfs_parsing.py  simulation.py  theory.py  util.py
htcondor/: fit_H2.sh  fit_H2.sub
models/: SFSstats.npz  rogers_2020.yaml
remote/: H2_map_test.py  H2_map_test.sh  IM_graph.yaml  IM_graph_assymetric.yaml  IM_params.yaml  IM_params_assymetric.yaml  NDYF_graph_fixed.yaml  NDYF_params_fixed.yaml  ND_init.yaml  ND_params.yaml  SFS_infer.sub  fit_H2.py  fit_H2.sh  fit_SFS.py  fit_composite.py  infer.sub  mass_siminfer.py  mass_siminfer.sub  sim_and_infer.sh  test.py
scripts/: bootstrap.py  build.sub  centromeres.txt  chrom_sim.py  chrom_sim.sh  chrom_sim.sub  compare_SFS_LL.py  compute_one_sample_two_locus_het.py  compute_two_sample_two_locus_het.py  extract_chr.sh  fit_SFS.sh  full_workup.sh  (+32 more)
(+4555 files in other folders)
