[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "h2py"
version = "0.0"
description = "a package for estimating two-locus heterozygosity"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.26.4",
    "scipy >= 1.14.1",
    "moments-popgen >= 1.2.2",
    "matplotlib >= 3.9.2"
]

[tool.setuptools]
packages = ["h2py", "h2py.scripts"]

[project.scripts]
parse_h2 = "h2py.scripts.parse_h2:main"
bootstrap_h2 = "h2py.scripts.bootstrap_h2:main"
fit_h2 = "h2py.scripts.fit_h2:main"
compute_uncerts = "h2py.scripts.compute_stderrs:main"
plot_h2 = "h2py.scripts.plot_h2:main"
plot_params = "h2py.scripts.plot_params:main"
